# electrum_engine

./: Cargo.toml  README.md
captures/: conv_to_slang__glsl.rdc
electrum_engine_macros/: Cargo.toml
electrum_engine_macros/src/: lib.rs
examples/test/: main.rs
examples/test/res/shaders/: color_correction.slang  colour_correction.frag  colour_correction.vert  colour_correction.vert.spv  common.slang  debug.frag  debug.frag.spv  debug.slang  debug.vert.spv  lit.slang  shadow.slang  test.frag  test.frag.spv  test.vert  test.vert.spv  test_lit.frag  test_lit.vert.spv  test_shadow.vert
res/shaders/: colour_correction.frag  colour_correction.frag.spv  frag.glsl  post_process.frag  post_process.frag.spv  post_process.vert  post_process.vert.spv  test.frag  test.frag.spv  test.vert  test.vert.spv  test_lit.frag  test_lit.frag.glsl  test_lit.frag.spv  test_lit.vert  test_lit.vert.spv  test_shadow.vert  test_shadow.vert.spv  vert.glsl
src/: buffer.rs  camera.rs  command.rs  descriptor.rs  draw.rs  extra.rs  image.rs  lib.rs  light.rs  model.rs  present.rs  render_graph.rs  render_pass.rs  resources.rs  shader.rs  task_graph.rs  texture.rs
src/model/: mesh.rs  mod.rs  primitives.rs  vertices.rs
