workspace = { members = ["electrum_engine_macros"] }

[package]
name = "electrum_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.92"
glam = "0.29.0"
vulkanalia = { version = "0.25.0", features = ["libloading", "window"] }
shaderc = "0.8.3"
thiserror = "1.0.67"
tobj = { version = "4.0.2", features = ["log"] }
tracing = "0.1.40"
winit = "0.30.5"
image = "0.25.4"

electrum_engine_macros = { path = "electrum_engine_macros"}

[dev-dependencies]
tracing-subscriber = "0.3.18"
