[package]
name = "electrum_engine_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.83"
deluxe = "0.5.0"
syn = "2.0.66"
quote = "1.0.36"
vulkanalia = { version = "0.22.0", features = ["libloading", "window"] }
multizip = "0.1.0"

[lib]
proc-macro = true
